updated and refactored
